<resources>
    <string name="app_name">Movie Ticket</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="simple">Fleksibel</string>
    <string name="desc_fleksibel">Lakukan pemesanan \ntiket tanpa perlu \nantri lagi.</string>
    <string name="lewati">Lewati</string>
    <string name="effesien">Effesien</string>
    <string name="desc_effesien">Menghemat waktu untuk\npesan tiket dimanapun\ndan kapanpun</string>
    <string name="hemat">Hemat</string>
    <string name="desc_hemat">Nikmati banyak keuntungan \nsaat pesan tiket dengan \npotongan promo \nsaat sale</string>
    <string name="signin">Sign-In</string>
    <string name="masuk">Masuk</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupapassword">Lupa Password ?</string>
    <string name="tanya">Belum Punya Akun ?</string>
    <string name="daftar">Daftar !</string>
    <string name="buatakun">Buat Akun</string>
    <string name="fullname">Fullname</string>
    <string name="email">E-mail</string>
    <string name="signup">Sign-Up</string>
    <string name="photo">Photo</string>
    <string name="selamatdatang">Selamat Datang,</string>
    <string name="lewatiupload">Lewati Upload</string>
    <string name="nama">Jamalul Ikhsan</string>
    <string name="simpan">Simpan dan Lanjutkan</string>
    <string name="saldo">IDR 500.000,00</string>
    <string name="nowplaying">Now Playing</string>
    <string name="comingsoon">Coming Soon</string>
    <string name="title_movie">Avengers : End Game</string>
    <string name="genre">Action, Adventture,Kids</string>
    <string name="desc">Deskripsi</string>
    <string name="actor">Aktor</string>
    <string name="desc_complete">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="pilihbangku">Pilih Bangku</string>
    <string name="myemail">Jamalul.Ikhsan@gmail.com</string>
    <string name="mywallet">My Wallet</string>
    <string name="logout">Logout</string>
    <string name="bahasa">Choose Language</string>
    <string name="edited">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="riwayat">Riwayat Hari Ini</string>
    <string name="totalfilm">145 Film Telah Ditonton</string>
    <string name="myticket">Tiket Saya</string>
    <string name="save">Simpan Profile</string>
    <string name="print">Quick Print</string>
    <string name="qr">Scan QR</string>
    <string name="alita">Alita Battle</string>
    <string name="rate">9.5</string>
    <string name="when">When</string>
    <string name="item">Items</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="date">12 Aug, 10 AM</string>
    <string name="cinema">Cinema</string>
    <string name="location">Depok Mall, Cinema 3</string>
    <string name="position">Position</string>
    <string name="seat">Seat No. C1</string>
    <string name="seat2">Seat No. C3</string>

    <string name="home">home</string>
    <string name="title">Berhasil</string>
    <string name="isi">Saldo Anda berhasil diisi. \n Selamat bertransaksi.</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_utama">IDR 500.000</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="transaksi_nama_film">Avengers : Endgame</string>
    <string name="tanggal_transaksi">Thu 15,April 2020</string>
    <string name="harga_transaksi">IDR 100.000</string>
    <string name="topup_saldo">Top-Up Saldo</string>
    <string name="pesan_tiket">Pesan Tiket</string>
    <string name="batalkan">Batalkan Pesanan</string>
    <string name="checkout">Checkout</string>
    <string name="jadwal">Jadwal</string>
    <string name="posisi">Posisi</string>
    <string name="ewallet">E-Wallet</string>
    <string name="tanggal_waktu"><![CDATA[Tanggal & Waktu]]></string>
    <string name="tanggal_waktu_isi">15 April, 9 AM</string>
    <string name="lokasi">Lokasi_bioskop</string>
    <string name="lokasi_">Lokasi Bioskop</string>
    <string name="lokasi_tempat">Puri Indah, lt 3</string>
    <string name="total_saldo_akun">Total Saldo Akun</string>

    <string name="total">Total Pembayaran</string>
    <string name="total_nominal">IDR 100.000</string>
    <string name="berhasil">Pemesanan Berhasil</string>
    <string name="berhasil_isi">Tiket Berhasil di pesan.\n Selamat Menonton.\n Enjoy It !</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="english">English</string>
    <string name="melayu">Melayu</string>
    <string name="bahasaindo">Bahasa Indonesia</string>
    <string name="korea">Korea</string>
    <string name="jepan">Jepang</string>
    <string name="jerman">Jerman</string>
    <string name="bantuan">Pusat Bantuan</string>
    <string name="informasi">Cari Informasi Disini</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="faq">FAQ</string>
    <string name="contact">Contacts</string>
    <string name="ulang">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="lorem_ipsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_ipsum_dikit">Lorem ipsum dolor sit amet\n, consectetur adipiscing elit,\n sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="lorem_ipsum_dikit_2">Lorem ipsum dolor sit amet, consectetur adipiscing \n elit, sed do eiusmod tempor incididunt ut labore et \n dolore magna aliqua</string>
    <string name="topup">Top-Up</string>
    <string name="nominal_saldo">Nominal Saldo</string>
    <string name="idr">IDR</string>
    <string name="top_up_sekarang">Top-Up Sekarang</string>
    <string name="topup25">IDR \n25.000</string>
    <string name="topup50">IDR \n50.000</string>
    <string name="topup75">IDR \n75.000</string>
    <string name="topup100">IDR \n100.000</string>
    <string name="topup200">IDR \n200.000</string>
    <string name="topup300">IDR \n300.000</string>
    <string name="topup150">IDR \n150.000</string>
    <string name="topup250">IDR \n250.000</string>
    <string name="topup500">IDR \n500.000</string>
    <string name="saldo200">IDR 200.000,00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
